--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,8 @@
 name: Deploy
 
 on:
-  workflow_run:
-    workflows: ["Release"]
-    types: 
-      - completed
+  release:
+    types: [created]
 
 jobs:
   release:
@@ -63,3 +61,15 @@ jobs:
         with:
           name: deploy-package-aws-eb-${{ env.VERSION }}
           path: deploy-${{ env.VERSION }}.zip 
+      
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VERSION: ${{ env.VERSION }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: deploy-${{ env.VERSION }}.zip
+          asset_name: deploy-${{ env.VERSION }}.zip
+          asset_content_type: application/zip
