fix(deploy-aws): slightly modified the zipping schema

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,10 @@ jobs:
           NAPSE_VERSION: ${{ env.VERSION }}
         run: |
           make setup-prod
-          zip -r deploy-aws-$VERSION.zip provisionEB/* provisionEB/.ebextensions provisionEB/.env
+          cd provisionEB
+          zip deploy-$VERSION.zip docker-compose.yml Dockerrun.aws.json .ebextensions .env
+          zip deploy-aws-$VERSION.zip deploy-$VERSION.zip config.json
+          mv deploy-aws-$VERSION.zip ../deploy-aws-$VERSION.zip
       
       - name: Upload Release Asset
         id: upload-release-asset
