fix(deploy-aws): secrets to env

--- a/backend/deploy/aws/.ebextensions/env.config
+++ b/backend/deploy/aws/.ebextensions/env.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    DJANGO_SECRET_KEY: '{{resolve:secretsmanager:napse-DJANGO_SECRET_KEY:SecretString}}'
-    AWS_ACCESS_KEY_ID: '{{resolve:secretsmanager:napse-AWS_ACCESS_KEY_ID:SecretString}}'
-    AWS_SECRET_ACCESS_KEY: '{{resolve:secretsmanager:napse-AWS_SECRET_ACCESS_KEY:SecretString}}'
-    AWS_S3_BUCKET_URI: '{{resolve:secretsmanager:napse-AWS_S3_BUCKET_URI:SecretString}}'
+    DJANGO_SECRET_KEY: '{{resolve:secretsmanager:napse-DJANGO_SECRET_KEY:SecretString:SECRET}}'
+    AWS_ACCESS_KEY_ID: '{{resolve:secretsmanager:napse-AWS_ACCESS_KEY_ID:SecretString:SECRET}}'
+    AWS_SECRET_ACCESS_KEY: '{{resolve:secretsmanager:napse-AWS_SECRET_ACCESS_KEY:SecretString:SECRET}}'
+    AWS_S3_BUCKET_URI: '{{resolve:secretsmanager:napse-AWS_S3_BUCKET_URI:SecretString:SECRET}}'
