--- a/backend/docker/production.yml
+++ b/backend/docker/production.yml
@@ -61,7 +61,7 @@ services:
     image: "traefik:v2.9.5"
     container_name: napse_dtk_prod_traefik
     command:
-      - "--log.level=INFO"
+      - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
